recursion.cons.min.Min.scala.error
Compilation error:
Min:4: error: missing arguments for method apply in object List;
follow this method with `_' if you want to treat it as a partially applied function
 List[Int] t = l.tail;
     ^Min:6: error: not found: value t
  if(t == Nil)
     ^Min:12: error: not found: value t
    if(t.head < l.head)
       ^Min:14: error: not found: value t
      return min(t);
                 ^Min:18: error: not found: value t
      t.tail;
      ^Min:20: error: not found: value t
      return(a::t);
                ^